tests/negative/traits/invoke_addr_method_not_found.orng
// invoke_addr_method_not_found.orng:8:8: error: the type `&Int` does not contain the member `add`
//     y.>add(56)
//       ^
// 
fn main() -> Int {
    let x = 4
    let y = &x
    y.>add(56)
}